     MClkPlay, MClkStop, MClkPlayStop, MClkPause, MClkDecTempo, MClkIncTempo, MClkSetTempo.
     Example can be found under cfg/test/midiclk.ngc

   o added new string formatting items:
     %t to display MIDI clock state (Play/Stop)
     %T to display tempo (BPM)

   o added new MClk menu page to SCS to control the tempo w/o dedicated controllers


MIDIbox NG V1.029
~~~~~~~~~~~~~~~~~

   o added USB MIDI workaround for Windows

   o if a EVENT_SENDER is part of a radio group, and got a new value, it will only
     send the MIDI event if the new value is matching with the specified range.
     Usage example: cfg/templates/pg300.ngc

   o if EVENT_RECEIVER forwarded to EVENT_AIN, EVENT_AINSER or EVENT_BUTTON,
     send also MIDI event.
     Usage example: cfg/templates/pg300.ngc

   o support for MBHP_CORE_STM32F4 module


MIDIbox NG V1.028
~~~~~~~~~~~~~~~~~

   o DOUT_MATRIX n=8 properly supported

   o now up to 16 DOUT_MATRIX and DIN_MATRIX can be configured


MIDIbox NG V1.027
~~~~~~~~~~~~~~~~~

   o .NGR: added "set_active" command. It can be alternatively used
     instead of the bank mechanism to activate/deactivate events,
     e.g. if the same events should be activated in multiple banks under
     certain conditions.
     A demo can be found under cfg/tests/multibnk.*

   o it's now possible to set a static forward value independent from the
     actual value of the event which initiates the forwarding.

     E.g. with
        EVENT_xxx fwd_id=SENDER:1:42
     the SENDER:1 will always get value 42 for additional processing

   o support for multiple MBHP_MF_NG modules in a chain.
     See cfg/test/mf_multi.ngc for a configuration example

   o support for Logic Control Meters
     Configuration example: see cfg/templates/logictrl.ngc
     (search for "meter")

   o added new GLCD fonts (provided by Pcbatterij): Inverted and Tiny.
     In order to test these fonts, try following commands in the MIOS Terminal:
     lcd %C&t@(1:1:1)Tiny Font