@@ -32,6 +32,15 @@
 
 extern s32 MBNG_CV_Init(u32 mode);
 
+extern s32 MBNG_CV_PitchRangeSet(u8 cv, u8 value);
+extern s32 MBNG_CV_PitchRangeGet(u8 cv);
+extern s32 MBNG_CV_PitchSet(u8 cv, s16 value);
+extern s32 MBNG_CV_PitchGet(u8 cv);
+extern s32 MBNG_CV_TransposeOctaveSet(u8 cv, s8 value);
+extern s32 MBNG_CV_TransposeOctaveGet(u8 cv);
+extern s32 MBNG_CV_TransposeSemitonesSet(u8 cv, s8 value);
+extern s32 MBNG_CV_TransposeSemitonesGet(u8 cv);
+
 extern s32 MBNG_CV_Update(void);
 
 extern s32 MBNG_CV_NotifyReceivedValue(mbng_event_item_t *item);
