@@ -198,6 +198,12 @@ typedef enum {
   MBNG_EVENT_META_TYPE_MCLK_DEC_TEMPO,
   MBNG_EVENT_META_TYPE_MCLK_INC_TEMPO,
 
+  MBNG_EVENT_META_TYPE_CV_PITCHBEND_14BIT,
+  MBNG_EVENT_META_TYPE_CV_PITCHBEND_7BIT,
+  MBNG_EVENT_META_TYPE_CV_PITCHRANGE,
+  MBNG_EVENT_META_TYPE_CV_TRANSPOSE_OCTAVE,
+  MBNG_EVENT_META_TYPE_CV_TRANSPOSE_SEMITONES,
+
   MBNG_EVENT_META_TYPE_SCS_ENC,
   MBNG_EVENT_META_TYPE_SCS_MENU,
   MBNG_EVENT_META_TYPE_SCS_SOFT1,
